src/objects/Client_Adviser_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Adviser_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adviser Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Adviser_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Adviser Configurations</relationshipLabel>
        <relationshipName>Client_Adviser_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yodlee_Id__c</fullName>
        <label>Yodlee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Client Adviser Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Id__c</columns>
        <columns>Adviser_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAC - {0}</displayFormat>
        <label>Client Advisor Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Adviser Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>